plugins {
    id 'java-library'
}

java {
    group = 'com.nixiedroid'
    version = 'unspecified'
    sourceCompatibility = "17"
    targetCompatibility = "17"
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
repositories {
    mavenCentral()
}

compileJava {
    options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
    options.compilerArgs << "--add-exports=java.base/jdk.internal.module=nixiedroid.dynamic.core"
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.jetbrains:annotations:24.0.0'
  //  implementation 'org.apache.bcel:bcel:6.8.2'
}

test {
    useJUnitPlatform()
}